
[project]
name = "harm-analysis"
dynamic = ["version"]
description = 'A Python library to estimate parameters from a signal containing a tone.'
readme = "README.md"
authors = [
    {name = 'Eric Macedo', email = 'ericsmacedo@gmail.com'},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10.0,<4.0"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]
keywords = ["DSP", "Signal-Processing", "THD", "SNR"]

[project.urls]
"Homepage" = "https://github.com/ericsmacedo/harm-analysis"
"Documentation" = "https://harm-analysis.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/ericsmacedo/harm-analysis/issues"

[dependency-groups]
dev = [
    "contextlib-chdir>=1.0.2",
    "coveralls>=3.3.1",
    "invoke>=2.2.0",
    "mkdocs-click>=0.8.1",
    "mkdocs-include-markdown-plugin>=6.0.5",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.18",
    "mkdocstrings-python>=1.9.2",
    "mypy>=1.9.0",
    "pre-commit>=4.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.2",
    "test2ref>=0.4.2",
]

[project.scripts]
harm-analysis = "harm_analysis.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/harm_analysis"]

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
fix = true
target-version = "py310"

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # pydocstyle
    "D",
    # pep8-naming
    "N",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-gettext
    "INT",
    # pylint
    "PL",
    # misc lints
    "PIE",
    # flake8-pyi
    "PYI",
    # tidy imports
    "TID",
    # implicit string concatenation
    "ISC",
    # type-checking imports
    "TC",
    # comprehensions
    "C",
    "C4",
    # pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit: exec-builtin
    "S102",
    # numpy-legacy-random
    "NPY002",
    # Perflint
    "PERF",
    # flynt
    "FLY",
    # flake8-logging-format
    "G",
    # pyupgrade
    "UP",
    # annotation
    # "ANN"
    # bandit
    # "S",
    # Argument
    "ARG",
    # Pathlib
    "PTH",
    # Simplify
    # "SIM",
    # Return
    "RET",
    # Raise
    "RSE",
]
ignore = [
    # mutable class
    'RUF012',
    # logging is allowed to use f-string
    'G004',
    # no __init__ doc
    'D107',
    # no magic method doc
    'D105',

]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Magic Values
    "PLR2004",
    # Argument
    "ARG001",
    # Assert
    "S101",
    # Open is allowed
    "PTH123",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts ="""
    --cov src/harm_analysis
    --cov-report term
    --cov-report html
    --doctest-glob=docs/*
    --doctest-modules
    --ignore-glob=tests/testdata/*
    --log-level=INFO
    --junitxml=report.xml
"""
filterwarnings = [
    "error",
]
testpaths = ["tests"]       # Directories to search for tests

[tool.coverage.run]
omit = [
]

[tool.coverage.report]
exclude_lines = [
    'return NotImplemented',
    'raise NotImplementedError()',
    'pragma: no cover',
    'assert False',
]

[tool.mypy]
disable_error_code = "misc"
ignore_missing_imports = true
# plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
